# SPECCPU2017Harmony

./: .gitignore  LICENSE  README.md  build-flang.sh  build-linux.sh  build-macos.sh  build-musl.sh  build-profile.json5  generate.perl  push.sh
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/libs/arm64-v8a/: libgcc_s.so.1  libgfortran.so.5
entry/src/main/: module.json5
entry/src/main/cpp/: .gitignore  CMakeLists.txt  napi_init.cpp  switch_stack.S  wrapper
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  utils.ets
entry/src/main/resources/base/element/: string.json
entry/src/ohosTest/ets/test/: Ability.test.ets
results/: HBN-AL80-O3-flto.csv  HBN-AL80-O3.csv  HBN-AL80.csv  README.md  compute.py  template.csv
results/best/: HBN-AL80-part-d03.csv  HBN-AL80.csv
results/best-old/int/: HBN-AL80-part-d03.csv
results/best/fp/: HBN-AL80-part-d03.csv
results/best/int/: HBN-AL80-part-d03.csv
results/full/: HBN-AL80-001.csv  HBN-AL80-002.csv  HBN-AL80-part-d03-001.csv  HBN-AL80-part-d03-002.csv
results/full-old/fp/: HAD-W32-part-d43-001.csv  HBN-AL80-part-d03-002.csv  HBN-AL80-part-d42-001.csv
results/full-old/int/: HAD-W32-part-d03-001.csv  HAD-W32-part-d42-001.csv  HBN-AL80-part-d03-001.csv  HBN-AL80-part-d42-001.csv
results/full/fp/: HAD-W32-part-d03-001.csv  HBN-AL80-part-d03-001.csv  HBN-AL80-part-d03-003.csv
results/full/int/: HAD-W32-part-d03-001.csv  HAD-W32-part-d03-002.csv  HAD-W32-part-d43-001.csv  HBN-AL80-part-d03-002.csv  HBN-AL80-part-d03-003.csv  HBN-AL80-part-d42-001.csv
